# kenso

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml  server.json
.codex/skills/kenso-ask/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: commands.md  roadmap.md  vision.md  writing_guide.md
docs/old/: audit_search_quality_factors.md  how_it_works.md  writing_guide.md
src/kenso/: __init__.py  __main__.py  backend.py  cli.py  config.py  ingest.py  install.py  lint.py  schema.py  server.py  ui.py
src/kenso/commands/: kenso-ask.md
tests/: test_backend.py  test_cli.py  test_config.py  test_eval.py  test_ingest.py  test_install.py  test_lint.py  test_server.py
tests/eval/: corpus.py  eval_harness.py
tests/eval/snapshots/: baseline.json  enriched-content.json  fix-1.2-tags-fts.json  p0-fixes.json  section-path-fts.json  sprint2.json  sprint3.json  tokenizer-fix.json
